src/objects/loan__Center__c.object
<CustomObject>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__CenterCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>CenterCnt</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Center_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Center External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Center_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Leader</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Loan Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Staff__c.loan__Branch__c</field>
                <operation>equals</operation>
                <valueField>$Source.loan__Branch__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipLabel>Centers (Current Loan Officer)</relationshipLabel>
        <relationshipName>Centers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Centers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location</description>
        <inlineHelpText>Location</inlineHelpText>
        <label>Location</label>
        <referenceTo>loan__Branch_Location__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Meeting_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Schedule</label>
        <referenceTo>loan__Meeting_Schedule__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Source_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Loan Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Staff__c.loan__Branch__c</field>
                <operation>equals</operation>
                <valueField>$Source.loan__Branch__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipLabel>Centers</relationshipLabel>
        <relationshipName>Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Center</label>
    <nameField>
        <label>Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>